--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,6 +32,10 @@
             ],
             "options": {
                 "cwd": "/usr/bin"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
             }
         }
     ]
